Fix for overlap between header menu and content.

--- a/web/themes/custom/spacebase/scss/_video.scss
+++ b/web/themes/custom/spacebase/scss/_video.scss
@@ -61,3 +61,8 @@
       height: 100%;
     }
 }
+
+.path-news .main-container.container.js-quickedit-main-content,
+.path-videos .main-container.container.js-quickedit-main-content {
+  padding-top: 9%
+}
